--- a/templates/result.html
+++ b/templates/result.html
@@ -3,10 +3,10 @@
 <head>
     <title>BMI Result</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
-
 </head>
 <body>
     <h1>Your BMI Result</h1>
     <p>Your BMI is: {{ bmi }}</p>
+    <p>{{ recommended_bmi_range }}</p>
 </body>
 </html>
