--- a/static/style.css
+++ b/static/style.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #000;
+    background-color: darkblue;
     margin: 0;
     padding: 0;
     display: flex;
@@ -34,16 +34,16 @@ label {
 }
 
 input[type="text"] {
-    width: 100%; /* Zmniejszenie szerokości do 100% */
+    width: 100%;
     padding: 10px;
     margin-bottom: 20px;
     margin-right: 10px;
     border: 1px solid #333;
     border-radius: 3px;
-    box-sizing: border-box; /* Ustawienie do modelu pudełkowego (box-sizing) */
+    box-sizing: border-box;
 }
 
-/* Ustaw ostatnie pole wejściowe bez marginesu po prawej stronie */
+
 input[type="text"]:last-child {
     margin-right: 0;
 }
