--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,12 @@
         <label for="height">Height (m):</label>
         <input type="text" name="height" required><br><br>
 
+        <label for="gender">Gender:</label>
+        <select name="gender" required>
+            <option value="male">Male</option>
+            <option value="female">Female</option>
+        </select><br><br>
+
         <input type="submit" value="Calculate BMI">
     </form>
 </body>
